# flexmm

./: LICENSE  README.md  README_zh-CN.md  WORKFLOW.md  WORKFLOW_zh-CN.md  pyproject.toml
docs/: API_Reference.md  API_Reference_ja.md  API_Reference_zh-CN.md  FlexMM_API_Reference.md  README_ja.md  README_zh-CN.md  WORKFLOW.md  WORKFLOW_ja.md  WORKFLOW_zh-CN.md
flexmm/: __init__.py
src/: data_prep.py  experiment.py  info_utils.py
