[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexmm"
version = "0.1.0"
description = "A model-agnostic framework for sequence-aware multimodal data preparation and reproducible experiment orchestration."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "multimodal-learning",
    "machine-learning",
    "data-preparation",
    "experiment-management",
    "sequence-modeling",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]
dev = [
    "build>=1.2",
    "pytest>=7.4",
    "ruff>=0.4",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flexmm*"]
exclude = ["docs*", "tests*"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
